--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
         <!-- la sezione delle novita che mi porta alla pagina delle novita -->
         <!-- <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕 Sezione delle Novità</a></h2> -->
         <button
+          onclick="window.location.href='./aggiornamenti/versione80100.html'"
+          class="bottone-novita">
+          📥 Aggiornamento Versione 8.01.00 
+        </button>
+
+        <button
           onclick="window.location.href='./modifiche-fatte/modifiche-indice.html'"
           class="bottone-novita"
         >
           🆕 Sezione delle Novità
         </button>
 
-        <button
-          onclick="window.location.href='./aggiornamenti/versione80100.html'"
-          class="bottone-novita">
-          🆕 Aggiornamento Versione 8.01.00 
-        </button>
       </section>
 
       <section>
