--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,8 +17,40 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
-
       <details open>
+        <summary>2025-11-05</summary>
+
+        <div class="card">
+          <div class="card-title">Duplica Avanzato in viaggio</div>
+          <div class="card-body">
+            <section>
+              <p>Dentro alle conferme del viaggio si puo' duplicare l'ordine che verra' riassegnato al viaggio</p>
+              <br />
+              <img src="../assets/viaggi/duplicaavanzatoordine.png" width="auto">
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Ripartizione per listino</div>
+          <div class="card-body">
+            <section>
+              <p>Al posto di fare la ripartizione a km, si possono assegnare i prezzi alle tratte in base al listino.
+              </p>
+              <img src="../assets/impostazioni/ripartizioneperlistino.png" width="auto">
+              <br />
+              <p>ALTAMENTE SCONSIGLIATO vi faccio solo vedere che c'e'</p>
+              <p>ovviamente ci devono essere anche i listini per le tratte</p>
+              <br />
+              <p>E' anche stata messa la ricerca delle impostazione generali</p>
+            </section>
+          </div>
+        </div>
+
+
+      </details>
+
+      <details>
         <summary>2025-11-03</summary>
 
         <div class="card">
