Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -16,8 +16,27 @@
 
     <section>
       <h2>🆕 Novità recenti</h2>
-
+      
       <details open>
+        <summary>2025-11-07</summary>
+
+        <div class="card">
+          <div class="card-title">Visualizzazione campo CER</div>
+          <div class="card-body">
+            <section>
+              <p>Nella tabella Mezzi è presente il campo booleano CER. Nella vecchia versione c’era un pannello in anagrafica dove si attivava con un flag, ora in Elite questo campo non viene gestito, al suo posto c’è la possibilità di indicare direttamente gli articoli.</p>
+              <br />
+              <img src="../assets/Mezzi/VisCampoCer01.png" width="auto">
+              <p>Nel caso il campo venga visualizzato nella ricerca, ora, verrà visualizzato attivo se è presente almeno un elemento nella lista</p>
+              <br />
+              <img src="../assets/Mezzi/VisCampoCer02.png" width="auto">
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-11-06</summary>
 
         <div class="card">
