--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,7 +18,7 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
-        <summary>2025-11-11</summary>
+        <summary>2025-11-11 - Riconoscimento Codice Prodotto</summary>
         <div class="card">
           <div class="card-title">Riconoscimento Codice Prodotto</div>
           <div class="card-body">
@@ -47,7 +47,7 @@
       </details>
 
       <details>
-        <summary>2025-11-07</summary>
+        <summary>2025-11-07 - Visualizzazione campo CER</summary>
 
         <div class="card">
           <div class="card-title">Visualizzazione campo CER</div>
@@ -69,7 +69,7 @@
       </details>
 
       <details>
-        <summary>2025-11-06</summary>
+        <summary>2025-11-06 - Listini con piu' um</summary>
 
         <div class="card">
           <div class="card-title">Listini con piu' um</div>
@@ -122,7 +122,7 @@
       </details>
 
       <details>
-        <summary>2025-11-05</summary>
+        <summary>2025-11-05 - Duplica Avanzato in viaggio - Ripartizione per listino</summary>
 
         <div class="card">
           <div class="card-title">Duplica Avanzato in viaggio</div>
@@ -155,7 +155,7 @@
       </details>
 
       <details>
-        <summary>2025-11-03</summary>
+        <summary>2025-11-03 - Mappa Manuale</summary>
 
         <div class="card">
           <div class="card-title">Mappa Manuale</div>
@@ -175,7 +175,8 @@
       </details>
 
       <details>
-        <summary>2025-10-14</summary>
+        <summary>2025-10-14 - Considera Viaggi Compresi - Cambiamento categorie planner - Filtro zona arrivo planner
+        </summary>
 
         <div class="card">
           <div class="card-title">Considera Viaggi Compresi</div>
@@ -218,7 +219,7 @@
       </details>
 
       <details>
-        <summary>2025-10-14</summary>
+        <summary>2025-10-14 - Aiuto risoluzioni problemi satellitari - Bollo virtuale automatico in fattura elettronica</summary>
 
         <div class="card">
           <div class="card-title">Aiuto risoluzioni problemi satellitari</div>
@@ -267,7 +268,7 @@
       </details>
 
       <details>
-        <summary>2025-10-08</summary>
+        <summary>2025-10-08 - Ricalcolo Km da Data a Data</summary>
 
         <div class="card">
           <div class="card-title">Ricalcolo Km da Data a Data</div>
@@ -286,7 +287,7 @@
       </details>
 
       <details>
-        <summary>2025-10-03</summary>
+        <summary>2025-10-03 - Caricamento Veloce Conferme Tramite Griglia</summary>
 
         <div class="card">
           <div class="card-title">Caricamento Veloce Conferme Tramite Griglia</div>
@@ -315,7 +316,7 @@
       </details>
 
       <details>
-        <summary>2025-10-02</summary>
+        <summary>2025-10-02 - Aggiunta Rotte Predefinite - Abilita visualizzazione per sede competenz</summary>
 
         <div class="card">
           <div class="card-title">Aggiunta Rotte Predefinite</div>
@@ -460,7 +461,7 @@
       </details>
 
       <details>
-        <summary>2025-09-30</summary>
+        <summary>2025-09-30 - Prototipi Ordini</summary>
 
         <div class="card">
           <div class="card-title">Prototipi Ordini</div>
@@ -508,7 +509,7 @@
       </details>
 
       <details>
-        <summary>2025-09-30</summary>
+        <summary>2025-09-30 - Impostazioni Stampe</summary>
 
         <div class="card">
           <div class="card-title">Impostazioni Stampe</div>
@@ -553,7 +554,7 @@
 
 
       <details>
-        <summary>2025-09-25</summary>
+        <summary>2025-09-25 - Combo box selezionabili in griglia</summary>
 
         <div class="card">
           <div class="card-title">Combo box selezionabili in griglia</div>
@@ -587,7 +588,7 @@
       </details>
 
       <details>
-        <summary>2025-09-24</summary>
+        <summary>2025-09-24 - Separazione punti per utente</summary>
 
         <div class="card">
           <div class="card-title">Separazione punti per utente</div>
@@ -611,7 +612,7 @@
       </details>
 
       <details>
-        <summary>2025-09-23</summary>
+        <summary>2025-09-23 - Gestione trasferte con valori nuovi</summary>
 
         <div class="card">
           <div class="card-title">Gestione trasferte con valori nuovi</div>
@@ -632,7 +633,7 @@
       </details>
 
       <details>
-        <summary>2025-09-16</summary>
+        <summary>2025-09-16 - Mittenti Destinatari - NUOVO CONTATORE - Colore relativo all'azienda - Ricerche Full Text - Targhe su tratte</summary>
 
         <div class="card">
           <div class="card-title">Mittenti Destinatari</div>
@@ -700,7 +701,7 @@
       </details>
 
       <details>
-        <summary>2025-09-15</summary>
+        <summary>2025-09-15 - Fatturazione Attiva </summary>
 
         <div class="card">
           <div class="card-title">FATTURAZIONE ATTIVA</div>
@@ -722,7 +723,7 @@
       </details>
 
       <details>
-        <summary>2025-09-11</summary>
+        <summary>2025-09-11 - Richiesta eliminazione Viaggio - liste in sola lettura - impostazione ore planner - Salva in Viaggio</summary>
 
         <div class="card">
           <div class="card-title">Richiesta eliminazione Viaggio</div>
@@ -790,7 +791,7 @@
       </details>
 
       <details>
-        <summary>2025-09-08</summary>
+        <summary>2025-09-08 - Controllo accessi clienti TIR / TIR PLUS</summary>
 
         <div class="card">
           <div class="card-title">Controllo accessi clienti TIR / TIR PLUS</div>
@@ -814,7 +815,7 @@
       </details>
 
       <details>
-        <summary>2025-08-29</summary>
+        <summary>2025-08-29 - Accessori in Ordine - Mezzi passaggio intermodale - Calendario Presenze</summary>
 
         <div class="card">
           <div class="card-title">Accessori in Ordine</div>
@@ -858,7 +859,7 @@
 
 
       <details>
-        <summary>2025-08-27</summary>
+        <summary>2025-08-27 - Fix PVIR</summary>
 
         <div class="card">
           <div class="card-title">Fix PVIR</div>
@@ -877,7 +878,7 @@
       </details>
 
       <details>
-        <summary>2025-08-26</summary>
+        <summary>2025-08-26 - Trasporti - Visite Mediche - Autisti Tessere</summary>
 
         <div class="card">
           <div class="card-title">Trasporti</div>
@@ -921,7 +922,7 @@
       </details>
 
       <details>
-        <summary>2025-08-25</summary>
+        <summary>2025-08-25 - Gap ricerca viaggio - Duplica POI</summary>
 
         <div class="card">
           <div class="card-title">Gap ricerca viaggio</div>
@@ -952,7 +953,7 @@
       </details>
 
       <details>
-        <summary>2025-08-22</summary>
+        <summary>2025-08-22 - Proprietà Mezzo</summary>
 
         <div class="card">
           <div class="card-title">Campo Proprietà Mezzo</div>
@@ -980,7 +981,7 @@
       </details>
 
       <details>
-        <summary>2025-08-21</summary>
+        <summary>2025-08-21 - Controllo limitazioni nazionali - Chiusura Scadenze - Generazione Numero DDT personalizzato - Cerca Impostazioni</summary>
 
         <div class="card">
           <div class="card-title">Controllo Limitazioni Nazionali</div>
@@ -1037,7 +1038,7 @@
       </details>
 
       <details>
-        <summary>2025-08-20</summary>
+        <summary>2025-08-20 - Salva singola riga - Invio Viaggio Manuale da ricerca</summary>
 
         <div class="card">
           <div class="card-title">Salva singola riga</div>
@@ -1063,7 +1064,7 @@
       </details>
 
       <details>
-        <summary>2025-08-19</summary>
+        <summary>2025-08-19 - Km a vuoto auto - Date Viaggio in base al percorso</summary>
 
         <div class="card">
           <div class="card-title">Km a vuoto auto</div>
