--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -219,7 +219,8 @@
       </details>
 
       <details>
-        <summary>2025-10-14 - Aiuto risoluzioni problemi satellitari - Bollo virtuale automatico in fattura elettronica</summary>
+        <summary>2025-10-14 - Aiuto risoluzioni problemi satellitari - Bollo virtuale automatico in fattura elettronica
+        </summary>
 
         <div class="card">
           <div class="card-title">Aiuto risoluzioni problemi satellitari</div>
@@ -633,7 +634,8 @@
       </details>
 
       <details>
-        <summary>2025-09-16 - Mittenti Destinatari - NUOVO CONTATORE - Colore relativo all'azienda - Ricerche Full Text - Targhe su tratte</summary>
+        <summary>2025-09-16 - Mittenti Destinatari - NUOVO CONTATORE - Colore relativo all'azienda - Ricerche Full Text
+          - Targhe su tratte</summary>
 
         <div class="card">
           <div class="card-title">Mittenti Destinatari</div>
@@ -723,7 +725,8 @@
       </details>
 
       <details>
-        <summary>2025-09-11 - Richiesta eliminazione Viaggio - liste in sola lettura - impostazione ore planner - Salva in Viaggio</summary>
+        <summary>2025-09-11 - Richiesta eliminazione Viaggio - liste in sola lettura - impostazione ore planner - Salva
+          in Viaggio</summary>
 
         <div class="card">
           <div class="card-title">Richiesta eliminazione Viaggio</div>
@@ -981,7 +984,8 @@
       </details>
 
       <details>
-        <summary>2025-08-21 - Controllo limitazioni nazionali - Chiusura Scadenze - Generazione Numero DDT personalizzato - Cerca Impostazioni</summary>
+        <summary>2025-08-21 - Controllo limitazioni nazionali - Chiusura Scadenze - Generazione Numero DDT
+          personalizzato - Cerca Impostazioni</summary>
 
         <div class="card">
           <div class="card-title">Controllo Limitazioni Nazionali</div>
@@ -1095,7 +1099,8 @@
       </details>
 
       <details>
-        <summary>2025-08-18</summary>
+        <summary>2025-08-18 - Campo Mansione in Autisti - Categorie PVIR - Nuova impostazione pedane - Data
+          registrazione pedane</summary>
 
         <div class="card">
           <div class="card-title">Campo Mansione in Autisti</div>
@@ -1145,7 +1150,8 @@
       </details>
 
       <details>
-        <summary>2025-07-31</summary>
+        <summary>2025-07-31 - Selezione multipla categorie PVIR - Riporta prezzo preventivo - Colore azienda abbinata
+        </summary>
 
         <div class="card">
           <div class="card-title">Selezione multipla categorie PVIR
@@ -1199,7 +1205,7 @@
       </details>
 
       <details>
-        <summary>2025-07-30</summary>
+        <summary>2025-07-30 - Opzioni nel poi UC</summary>
 
         <div class="card">
           <div class="card-title">Opzioni nel poi UC
@@ -1218,7 +1224,7 @@
       </details>
 
       <details>
-        <summary>2025-07-28</summary>
+        <summary>2025-07-28 - Impostazione aggiornamento viaggi - Tabella abbinamento conferme e contaienrs</summary>
 
         <div class="card">
           <div class="card-title">Impostazione aggiornamento viaggi
@@ -1262,7 +1268,7 @@
 
 
       <details>
-        <summary>2025-07-24</summary>
+        <summary>2025-07-24 - Modifica dati tecnici mezzi</summary>
 
         <div class="card">
           <div class="card-title">Modifica dati tecnici mezzi</div>
@@ -1280,7 +1286,7 @@
       </details>
 
       <details>
-        <summary>2025-07-24</summary>
+        <summary>2025-07-24 - Disattiva salvataggio targhe - Storico prezzi nei viaggi</summary>
 
         <div class="card">
           <div class="card-title">DISATTIVA SALVATAGGIO TARGHE</div>
@@ -1310,7 +1316,7 @@
 
 
       <details>
-        <summary>2025-07-23</summary>
+        <summary>2025-07-23 - Suddivisione 12</summary>
 
         <div class="card">
           <div class="card-title">Suddivisione 12</div>
@@ -1330,7 +1336,7 @@
       </details>
 
       <details>
-        <summary>2025-07-22</summary>
+        <summary>2025-07-22 - Nuova gestione poi</summary>
 
         <div class="card">
           <div class="card-title">Nuova gestione poi</div>
@@ -1354,7 +1360,7 @@
       </details>
 
       <details>
-        <summary>2025-07-21</summary>
+        <summary>2025-07-21 - Modifiche nel modulo container</summary>
 
         <div class="card">
           <div class="card-title">Modifiche nel modulo container</div>
@@ -1379,7 +1385,9 @@
       </details>
 
       <details>
-        <summary>2025-07-17</summary>
+        <summary>2025-07-17 - Riparazione Interna verso Conferme - Aggiunta colonna Azienda Abbinata - Aggiunta mitt
+          dest da preventivo - Aggiunte colonne al km nei viaggi - Ammortamento costo verbale per autisti - Planner -
+          risolto filtro impegno - Numero civico nei preventivi</summary>
 
         <div class="card">
           <div class="card-title">Riparazione Interna verso Conferme</div>
@@ -1471,7 +1479,7 @@
 
 
       <details>
-        <summary>2025-07-16</summary>
+        <summary>2025-07-16 - Impostazioni Planner - Range date utili Planner - Nuova assegnazione date viaggi</summary>
 
         <div class="card">
           <div class="card-title">Impostazioni Planner</div>
@@ -1530,7 +1538,7 @@
       </details>
 
       <details>
-        <summary>2025-07-11</summary>
+        <summary>2025-07-11 - Controllo aziende</summary>
 
         <div class="card">
           <div class="card-title">Controllo aziende</div>
@@ -1545,7 +1553,7 @@
       </details>
 
       <details>
-        <summary>2025-07-11</summary>
+        <summary>2025-07-11 - Messo il numero assi nelle mappe</summary>
 
         <div class="card">
           <div class="card-title">Messo il numero assi nelle mappe</div>
@@ -1562,7 +1570,7 @@
       </details>
 
       <details>
-        <summary>2025-07-10</summary>
+        <summary>2025-07-10 - Flag nascondi negli autisti</summary>
 
         <div class="card">
           <div class="card-title">Flag nascondi negli autisti</div>
@@ -1577,7 +1585,7 @@
       </details>
 
       <details>
-        <summary>2025-07-09</summary>
+        <summary>2025-07-09 - DataEseguita scadenze autista</summary>
 
         <div class="card">
           <div class="card-title">DataEseguita scadenze autista</div>
@@ -1599,7 +1607,7 @@
       </details>
 
       <details>
-        <summary>2025-07-08</summary>
+        <summary>2025-07-08 - Fix km conferme - Nuova impostazione per ordini e container</summary>
 
         <div class="card">
           <div class="card-title">Fix km conferme</div>
@@ -1643,7 +1651,7 @@
       </details>
 
       <details>
-        <summary>2025-07-05</summary>
+        <summary>2025-07-05 - Selezione Cassa - ConfermaUC - Data fine contratto - Contratti pagamenti</summary>
 
         <div class="card">
           <div class="card-title">Selezione Cassa - ConfermaUC</div>
@@ -1719,7 +1727,7 @@
       </details>
 
       <details>
-        <summary>2025-07-04</summary>
+        <summary>2025-07-04 - Cancellazione Multipla - Modifica a Mantieni uniti poi e vari fix</summary>
 
         <div class="card">
           <div class="card-title">Cancellazione Multipla</div>
@@ -1786,7 +1794,8 @@
       </details>
 
       <details>
-        <summary>2025-07-03</summary>
+        <summary>2025-07-03 - Spese vecchie nel viaggio - Tratta dopo destinazione - Aggiornamento - Tratta dopo
+          destinazione</summary>
         <div class="card">
           <div class="card-title">Spese vecchie nel viaggio</div>
           <div class="card-body">
@@ -1814,7 +1823,7 @@
       </details>
 
       <details>
-        <summary>2025-07-02</summary>
+        <summary>2025-07-02 - Formulari</summary>
         <div class="card">
           <div class="card-title">Formulari</div>
           <div class="card-body">
@@ -1833,7 +1842,7 @@
       </details>
 
       <details>
-        <summary>2025-07-01</summary>
+        <summary>2025-07-01 - Compensazione Scadenze - Formulari</summary>
         <div class="card">
           <div class="card-title">Compensazione Scadenze</div>
           <div class="card-body">
@@ -1854,7 +1863,7 @@
       </details>
 
       <details>
-        <summary>2025-06-30</summary>
+        <summary>2025-06-30 - Navigatore PTV - Lettore Barcode</summary>
         <div class="card">
           <div class="card-title">Navigatore PTV</div>
           <div class="card-body">
