5467: Aggiorna dettagli container all'interno delle tratte

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,7 +18,7 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
-        <summary>2025-11-11 - Riconoscimento Codice Prodotto</summary>
+        <summary>2025-11-11 - Riconoscimento Codice Prodotto - Impostazione container</summary>
         <div class="card">
           <div class="card-title">Riconoscimento Codice Prodotto</div>
           <div class="card-body">
@@ -39,6 +39,22 @@
               <br />
               <p><strong>Risultato:</strong> Se trova una corrispondenza, auto-compila <strong>Nome Prodotto</strong>,
                 <strong>Larghezza</strong>, <strong>Altezza</strong> e <strong>Lunghezza</strong> della riga.
+              </p>
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Impostazione container: salva informazioni nelle tratte</div>
+          <p><small>Modifica presente nel menu attuale, non nel branch</small></p>
+          <div class="card-body">
+            <section>
+              <p>Implementata personalizzazione per i containers che permette di aggiornare i dati 
+                all'interno delle tratte ogni volta che vengono aggiornati all'interno della madre.</p>
+                <p>Nome personalizzazione:</br>
+                  SALVA DETTAGLI CONTAINER NELLE TRATTE</p>
+              <p>Dati che vengono salvati nelle tratte:
+                <img src="../assets/Container/Impostazioni/SalvaDettagliContainerNelleTratte.png" width="auto">
               </p>
             </section>
           </div>
