5467: Aggiornato per branch

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -46,7 +46,7 @@
 
         <div class="card">
           <div class="card-title">Impostazione container: salva informazioni nelle tratte</div>
-          <p><small>Modifica presente nel menu attuale, non nel branch</small></p>
+          <p><small>Modifica presente sia nel menu attuale che nel branch</small></p>
           <div class="card-body">
             <section>
               <p>Implementata personalizzazione per i containers che permette di aggiornare i dati 
