--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,27 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-11-18 - Campi Obbligatori <small>(branch container)</small></summary>
+        <div class="card">
+          <div class="card-title">Campi Obbligatori</div>
+          <div class="card-body">
+            <section>
+              <p>All'interno delle impostazioni delle conferme, oppure nelle impostazioni condivise dei container si può accedere alla sezione dei campi obbligatori</p>
+              <p>Qui si possono selezionare i campi che devono essere compilati obbligatoriamete per completare la registrazione della conferma, fatturazione o container</p>
+              <img src="../assets/impostazioni/CampiObbligatori.png" width="auto">
+              <p>Con i primi tre "Radio buttons" si può selezionare il modulo per il quale si vogliono impostare i campi obbligatori</p>
+              <p>Con le combobox in seconda riga si possono ulteriormente controllare caso a caso quando i campi risulteranno obbligatori o meno
+                <ul>
+                  <strong>NOTA BENE</strong><br>
+                  <p>Questi filtri sono forzati, se la registrazione viene fatta per il cliente "A" senza indicare il Tipo Conferma (Import, Export...), ma i campi obbligatori sono stati compilati come cliente: "A" Tipo Conferma: "IMPORT" allora non verranno trovati i campi obbligatori</p>
+                </ul>
+              </p>
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-11-11 - Riconoscimento Codice Prodotto - Impostazione container</summary>
         <div class="card">
           <div class="card-title">Riconoscimento Codice Prodotto</div>
