--- a/planner/master-lista-planner.html
+++ b/planner/master-lista-planner.html
@@ -19,9 +19,23 @@
         <section>
             <h2>📖 Guida Planner</h2>
             <ul>
-                <!-- Aggiungi altri collegamenti qui in futuro -->
+                <li>
+                    <a href="../planner/calendario-padre.html">💣 Funzioni comuni</a>
+                </li>
+                <li>
+                    <a href="../planner/calendario-ore.html">🕜 Visualizzazione Ore</a>
+                </li>
+                <li>
+                    <a href="../planner/calendario-pvts.html">🧮 Visualizzazione PVTS</a>
+                </li>
+                <li>
+                    <a href="../planner/calendario-giornata.html">📅 Visualizzazione Giornata</a>
+                </li>
                 <li>
                     <a href="../planner/solo-righe.html">🎼 Visualizzazione SoloRighe</a>
+                </li>
+                <li>
+                    <a href="../planner/controlli-comuni.html">🧩 Controlli Comuni</a>
                 </li>
             </ul>
         </section>
