--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </li>
 
         <li>
-          <a href="./Satellitari/satellitari-normies.html">🏭 Deposito</a>
+          <a href="./Satellitari/satellitari-normies.html">🛰️ Satellitari</a>
         </li>
       </ul>
     </section>
