aggiunta guida listini

--- a/ordini/master-lista-ordini.html
+++ b/ordini/master-lista-ordini.html
@@ -32,6 +32,9 @@
                 <li>
                     <a href="../ordini/requisiti-mezzi.html">⚙️ Requisiti Ordini</a>
                 </li>
+                <li>
+                    <a href="../ordini/base-listini.html">💰 Calcolo listini</a>
+                </li>
             </ul>
         </section>
 
