5606 Come usare SatTools all'interno di elite

--- a/Satellitari/satellitari-normies.html
+++ b/Satellitari/satellitari-normies.html
@@ -22,6 +22,14 @@
       </section>
 
       <section>
+        <h2>SatToolsR è deprecato</h2>
+        <p>
+          Dove si trova ora e come usarlo
+          <a href="./NewSatToolsTutorial.html">questa pagina</a>
+        </p>
+      </section>
+
+      <section>
         <h2>🧭 Introduzione</h2>
         <p>
           Il sistema satellitare è un modulo integrato nella piattaforma
