5606 indicata creazione scheda nelle modifiche-indice

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,18 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-11-24 - Rilocazione di SatToolsR</summary>
+        <div class="card">
+          <div class="card-title">Rilocazione di SatToolsR</div>
+          <div class="card-body">
+            <section>
+              <p>Inserita una nuova scheda all'interno di "<a href="../Satellitari/satellitari-normies.html">Sistema Satellitari</a>" per condividere lo spostamento di SatTools all'interno del menu (<a href="../Satellitari/NewSatToolsTutorial.html">Dove trovare questa pagina</a>)</p>
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-11-18 - Campi Obbligatori <small>(branch container)</small></summary>
         <div class="card">
           <div class="card-title">Campi Obbligatori</div>
