4360: Campi completamento automatico

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,7 +17,10 @@
         <h2>🆕 Novità recenti</h2>
 
         <details open>
-          <summary>2025-11-24 - Rilocazione di SatToolsR</summary>
+          <summary>
+            2025-11-24 - Rilocazione di SatToolsR - Campi completamento
+            automatico <small>(Branch container)</small>
+          </summary>
           <div class="card">
             <div class="card-title">Rilocazione di SatToolsR</div>
             <div class="card-body">
@@ -30,6 +33,50 @@
                   menu (<a href="../Satellitari/NewSatToolsTutorial.html"
                     >Dove trovare questa pagina</a
                   >)
+                </p>
+              </section>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">Campi completamento automatico</div>
+            <div class="card-body">
+              <section>
+                <p>
+                  All'interno delle impostazioni condivise dei container e delle
+                  conferme, è stata aggiunta una sezione per la gestione dei
+                  campi di completamento automatico. Questa sezione permette di
+                  configurare dei campi in modo che vengano automaticamente
+                  riempiti in base alle selezioni dell'utente
+                  <img
+                    src="../assets/impostazioni/CampiCompletamentoAutomatico.png"
+                    width="auto"
+                  />
+                </p>
+                <p>
+                  In cima alla sezione, ci sono tre pulsanti radio che
+                  permettono di selezionare il modulo nel quale si desidera
+                  configurare i campi di completamento automatico: Conferma,
+                  Fatturazione o Container.<br />
+                  Sotto questi pulsanti, ci sono delle combobox, una per il
+                  cliente, una per la sede del cliente (visibile solamente se il
+                  cliente ha delle sedi abbinate) e una per il tipo di conferma
+                  (che definisce se è import o export ad esempio). Questi filtri
+                  permettono di specificare ulteriormente quando i campi di
+                  completamento automatico dovrebbero essere applicati.
+                </p>
+                <p>
+                  Questa implementazione attualmente avrà effetto solamente
+                  all'interno del modulo dei containers
+                </p>
+                <p>
+                  <small
+                    >Alcuni dei campi presenti all'interno di questo screenshot
+                    non saranno più presenti in futuro in quanto alcuni di
+                    questi non sono campi che possono essere modificati
+                    dall'utente, ma campi calcolati o derivati da precedure
+                    interne al programma</small
+                  >
                 </p>
               </section>
             </div>
